[package]
name = "ortie"
description = "CLI to manage OAuth 2.0 access tokens"
version = "0.0.1"
authors = ["soywod <clement.douin@posteo.net>"]
rust-version = "1.87"
edition = "2021"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["cli", "oauth", "token", "flow", "auth"]
homepage = "https://pimalaya.org"
documentation = "https://github.com/pimalaya/ortie"
repository = "https://github.com/pimalaya/ortie"

[package.metadata.docs.rs]
features = ["rustls-ring", "command"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["rustls-ring"]

# TLS
#
native-tls = ["pimalaya-toolbox/native-tls"]
rustls-aws = ["pimalaya-toolbox/rustls-aws"]
rustls-ring = ["pimalaya-toolbox/rustls-ring"]

# Storages and hooks
#
command = ["dep:io-process", "pimalaya-toolbox/command"]
keyring = ["dep:io-keyring", "pimalaya-toolbox/keyring"]
notify = ["dep:notify-rust"]

# Vendored (OpenSSL and D-Bus)
#
vendored = ["pimalaya-toolbox/vendored", "notify-rust?/d_vendored", "io-keyring?/vendored"]

[build-dependencies]
pimalaya-toolbox = { version = "0.0.1", default-features = false, features = ["build"] }

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4.4", features = ["derive", "wrap_help"] }
dirs = "6.0"
http = "1"
humantime = "2.2"
io-keyring = { version = "0.0.2", default-features = false, features = ["serde", "std"], optional = true }
io-oauth = { version = "0.0.2", default-features = false, features = ["oauth2", "pkce"] }
io-process = { version = "0.0.2", default-features = false, features = ["expand", "serde", "std"], optional = true }
io-stream = { version = "0.0.2", default-features = false, features = ["std"] }
log = "0.4"
notify-rust = { version = "4.11", default-features = false, features = ["dbus"], optional = true }
open = "5.3"
pimalaya-toolbox = { version = "0.0.1", default-features = false, features = ["config", "secret", "stream", "terminal"] }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
shellexpand = "3.1"
url = "2.5"
