[package]
name = "ortie"
description = "CLI to manage OAuth tokens"
version = "2.0.0"
authors = ["soywod <pimalaya.org@posteo.net>"]
rust-version = "1.89"
edition = "2024"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities"]
keywords = ["oauth", "oauth2", "token", "pkce", "cli"]
homepage = "https://pimalaya.org"
repository = "https://github.com/pimalaya/ortie"

[features]
default = ["rustls-ring"]
native-tls = ["pimalaya-stream/native-tls", "io-oauth/native-tls", "io-pim-discovery/native-tls"]
rustls-aws = ["pimalaya-stream/rustls-aws", "io-oauth/rustls-aws", "io-pim-discovery/rustls-aws"]
rustls-ring = ["pimalaya-stream/rustls-ring", "io-oauth/rustls-ring", "io-pim-discovery/rustls-ring"]
vendored = ["pimalaya-stream/vendored", "io-oauth/vendored", "io-pim-discovery/vendored", "notify-rust?/d_vendored"]
notify = ["dep:notify-rust"]

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[build-dependencies]
pimalaya-cli = { version = "0.1", default-features = false, features = ["build"] }

[dev-dependencies]
env_logger = "0.11"
rustls = "0.23"
rustls-platform-verifier = "0.7"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4.4", features = ["derive", "wrap_help"] }
dirs = "6.0"
humantime = "2.2"
io-oauth = { version = "0.2", default-features = false, features = ["client"] }
io-pim-discovery = { version = "0.3", default-features = false, features = ["stream", "autoconfig", "pacc", "rfc6186", "rfc6764", "rfc8620", "rfc8414"] }
log = "0.4"
notify-rust = { version = "4.18", default-features = false, features = ["d"], optional = true }
open = "5.3"
pimalaya-cli = { version = "0.1", default-features = false, features = ["terminal", "prompt", "spinner"] }
pimalaya-config = { version = "0.1", default-features = false, features = ["toml", "secret"] }
pimalaya-stream = { version = "0.1", default-features = false, features = ["std"] }
secrecy = { version = "0.10", default-features = false, features = ["serde"] }
serde = { version = "1", default-features = false, features = ["alloc", "derive"] }
shellexpand = "3.1"
url = { version = "2.5", default-features = false, features = ["serde"] }
